<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vaisbleh.user.my_classes_and_lessons.activities.NewGroupActivity">

    <EditText
        android:id="@+id/editGroupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/enter_group_name"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <EditText
        android:id="@+id/editSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editGroupName"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/enter_site"
        android:inputType="textPersonName"
        android:padding="5dp" />

    <Button
        android:id="@+id/saveGroupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editSite"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/save" />
</RelativeLayout>
