<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vaisbleh.user.my_classes_and_lessons.activities.EditStudentActivity">

    <EditText
        android:id="@+id/editStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_student_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textAlignment="textStart" />

    <Spinner
        android:id="@+id/editStudentSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editStudentName"
        android:layout_margin="10dp"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editStudentSpinner"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:id="@+id/linearLayout2">

        <EditText
            android:id="@+id/editStudentPhotoAdr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_photo_address"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <Button
            android:id="@+id/showBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:text="@string/show_photo"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@+id/saveStudentBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/save" />

    <ImageView
        android:id="@+id/imageEditView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/saveStudentBtn"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" />


</RelativeLayout>
